chore: update readme

--- a/DOCS/21-04-2025.md
+++ b/DOCS/21-04-2025.md
@@ -2,9 +2,10 @@
 
 **Date:** YYYY-MM-DD
 
-**Topic:** [Be brief and descriptive, e.g.: Flutter RawKeyboardListener Focus, Difference between setState vs Cubit, Basic Strategy Pattern]
+**Topic:** #folder-structure
 
----
+1. escolhendo a estrutura de pastas:
+
 
 ### What I Learned:
 
